# grackle

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .yamllint.yaml  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  RELEASING.md  SECURITY.md  WHITEPAPER.md  action.yml
.github/: CODEOWNERS  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: cargo-audit.yml  ci.yml  codeql.yml  docs.yml  release.yml  scorecard.yml
.hugo/: config.toml
.hugo/layouts/partials/: custom-header.html  logo.html
.hugo/scripts/: build_docs.py  regen_readme_counts.py
.hugo/static/: llms.txt  robots.txt
.hugo/static/css/: custom.css
docs/: ci-cd.md  cli.md  detection-model.md  index.md  limitations.md  output-formats.md  remediations.md
snap/: snapcraft.yaml
src/: localaction.rs  main.rs  report.rs  scanner.rs  workflow.rs
src/comment/: context.rs  fingerprint.rs  http.rs  inline.rs  mod.rs  posting.rs  rendering.rs
src/rules/: action.rs  gitlab.rs  installed.rs  metadata.rs  mod.rs  remediation.rs
